--- a/train.ipynb
+++ b/train.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "from tensorflow.keras import datasets, utils, optimizers, losses, callbacks\n",
     "from src.model import cnn_model\n",
-    "from src.utils import plot_results, plot_predicts\n",
-    "import yaml\n",
+    "from src.utils import read_config, plot_results, plot_predicts\n",
     "import datetime"
    ]
   },
@@ -19,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./configs/configurations.yaml\", 'r') as file:\n",
-    "    config = yaml.safe_load(file)"
+    "config = read_config()"
    ]
   },
   {
