cleaning and modifications
- train_custom file cleaning
- adding some parameteres to configuration

--- a/train_custom.ipynb
+++ b/train_custom.ipynb
@@ -6,34 +6,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from tensorflow.keras import datasets, utils, optimizers, losses, callbacks\n",
-    "from src.model import cnn_model\n",
+    "from src.model import cnn_model_2\n",
     "from src.utils import read_config, plot_results, plot_predicts\n",
-    "import datetime\n",
-    "from tensorflow.keras import layers, models\n",
+    "from tensorflow.keras.models import load_model\n",
     "from tensorflow.keras.utils import image_dataset_from_directory\n",
-    "\n",
+    "from tensorflow.keras import callbacks\n",
+    "import numpy as np\n",
     "import os\n",
     "import shutil, pathlib\n",
-    "import matplotlib.pyplot as plt"
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = read_config()\n",
-    "# Set paths for train and test data\n",
-    "train_data_dir = './data/MNIST Dataset/Train'\n",
-    "test_data_dir = './data/MNIST Dataset/Test'"
+    "config = read_config()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Creation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -76,13 +78,18 @@
     }
    ],
    "source": [
+    "# Set paths for train and test data (original)\n",
+    "train_origin_data_dir = os.path.join(config[\"training_data\"][\"original_dataset_path\"], \"Train\")\n",
+    "test_origin_data_dir = os.path.join(config[\"training_data\"][\"original_dataset_path\"], \"Test\")\n",
+    "\n",
+    "# Origin Dataset Information\n",
     "train_num_images = []\n",
     "test_num_images = []\n",
     "for i in range(10):\n",
-    "    num_train = len(os.listdir(os.path.join(train_data_dir, str(i))))\n",
+    "    num_train = len(os.listdir(os.path.join(train_origin_data_dir, str(i))))\n",
     "    train_num_images.append(num_train)\n",
     "    print(f'Train: {num_train} for class {i}')\n",
-    "    num_test = len(os.listdir(os.path.join(test_data_dir, str(i))))\n",
+    "    num_test = len(os.listdir(os.path.join(test_origin_data_dir, str(i))))\n",
     "    test_num_images.append(num_test)\n",
     "    print(f'Test: {num_test} for class {i}\\n')\n",
     "    \n",
@@ -99,10 +106,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_base_dir = pathlib.Path(\"./data/MNIST_Manual_Dataset\")\n",
-    "\n",
-    "def make_subset(base_dir, subset_name, create_balance, start_index, end_index):\n",
-    "    for category in (\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"):\n",
+    "# New training dataset creation function\n",
+    "def make_subset(base_dir, new_base_dir, subset_name, dataset_classes, create_balance, start_index, end_index):\n",
+    "    for category in tuple(dataset_classes[1:-1].split(\",\")):\n",
     "        dir = new_base_dir / subset_name / category\n",
     "        if not os.path.exists(dir):\n",
     "            os.makedirs(dir)\n",
@@ -118,41 +124,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5420\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1000.0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(train_min_num_image-1)\n",
-    "5000 - (5000 * 0.8)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "make_subset(train_data_dir, \"validation\", create_balance=True, start_index=0, end_index=1000)\n",
-    "make_subset(train_data_dir, \"train\", create_balance=True, start_index=1000, end_index=5000)\n",
-    "make_subset(test_data_dir, \"test\", create_balance=True, start_index=0, end_index=800)"
+    "# New training dataset creation\n",
+    "new_base_dir = pathlib.Path(config[\"training_data\"][\"new_dataset_path\"])\n",
+    "dataset_classes = config[\"training_data\"][\"dataset_class_names\"]\n",
+    "\n",
+    "make_subset(train_origin_data_dir, new_base_dir, \"validation\", dataset_classes, create_balance=True, start_index=0, end_index=1000)\n",
+    "make_subset(train_origin_data_dir, new_base_dir, \"train\", dataset_classes, create_balance=True, start_index=1000, end_index=5000)\n",
+    "make_subset(test_origin_data_dir, new_base_dir, \"test\", dataset_classes, create_balance=True, start_index=0, end_index=800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preparation"
    ]
   },
   {
@@ -161,9 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dir = \"./data/MNIST_Manual_Dataset/train\"\n",
-    "validation_dir = \"./data/MNIST_Manual_Dataset/validation\"\n",
-    "test_dir = \"./data/MNIST_Manual_Dataset/test\""
+    "train_dir = os.path.join(config[\"training_data\"][\"new_dataset_path\"], \"train\")\n",
+    "validation_dir = os.path.join(config[\"training_data\"][\"new_dataset_path\"], \"validation\")\n",
+    "test_dir = os.path.join(config[\"training_data\"][\"new_dataset_path\"], \"test\")"
    ]
   },
   {
@@ -217,28 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensorflow.python.data.ops.dataset_ops.BatchDataset"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(test_dataset)\n",
-    "# test_dataset.element_spec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -248,114 +216,13 @@
       "data batch shape: (32, 100, 100, 1)\n",
       "label batch shape: (32,)\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\moham\\AppData\\Local\\Temp\\ipykernel_10436\\3344828838.py:5: UserWarning: FigureCanvasAgg is non-interactive, and thus cannot be shown\n",
-      "  plt.show()\n"
-     ]
     }
    ],
    "source": [
+    "# Checking Shapes\n",
     "for data_batch, label_batch in train_dataset.take(1):\n",
     "    print('data batch shape:', data_batch.shape)\n",
-    "    print('label batch shape:', label_batch.shape)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensorflow.python.data.ops.dataset_ops.PrefetchDataset"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(validation_dataset)\n",
-    "# len(train_dataset)\n",
-    "# train_dataset.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_4\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_6 (InputLayer)         [(None, 100, 100, 1)]     0         \n",
-      "_________________________________________________________________\n",
-      "rescaling_3 (Rescaling)      (None, 100, 100, 1)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_17 (Conv2D)           (None, 98, 98, 32)        320       \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_12 (MaxPooling (None, 49, 49, 32)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_18 (Conv2D)           (None, 47, 47, 64)        18496     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_13 (MaxPooling (None, 23, 23, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_19 (Conv2D)           (None, 21, 21, 128)       73856     \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_14 (MaxPooling (None, 10, 10, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_20 (Conv2D)           (None, 8, 8, 256)         295168    \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_15 (MaxPooling (None, 4, 4, 256)         0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_21 (Conv2D)           (None, 2, 2, 256)         590080    \n",
-      "_________________________________________________________________\n",
-      "flatten_4 (Flatten)          (None, 1024)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 10)                10250     \n",
-      "=================================================================\n",
-      "Total params: 988,170\n",
-      "Trainable params: 988,170\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "inputs = layers.Input(shape=(100, 100, 1))\n",
-    "try:\n",
-    "    x = layers.Rescaling(1./255)(inputs)\n",
-    "except:\n",
-    "    x = layers.experimental.preprocessing.Rescaling(1./255)(inputs)\n",
-    "x = layers.Conv2D(filters=32, kernel_size=3, activation=\"relu\")(x)\n",
-    "x = layers.MaxPooling2D(pool_size=2)(x)\n",
-    "x = layers.Conv2D(filters=64, kernel_size=3, activation=\"relu\")(x)\n",
-    "x = layers.MaxPooling2D(pool_size=2)(x)\n",
-    "x = layers.Conv2D(filters=128, kernel_size=3, activation=\"relu\")(x)\n",
-    "x = layers.MaxPooling2D(pool_size=2)(x)\n",
-    "x = layers.Conv2D(filters=256, kernel_size=3, activation=\"relu\")(x)\n",
-    "x = layers.MaxPooling2D(pool_size=2)(x)\n",
-    "x = layers.Conv2D(filters=256, kernel_size=3, activation=\"relu\")(x)\n",
-    "x = layers.Flatten()(x)\n",
-    "outputs = layers.Dense(10, activation=\"softmax\")(x)\n",
-    "model = models.Model(inputs=inputs, outputs=outputs)\n",
-    "\n",
-    "model.summary()\n",
-    "# model = cnn_model()"
+    "    print('label batch shape:', label_batch.shape)"
    ]
   },
   {
@@ -371,9 +238,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n"
+    "model = cnn_model_2()\n",
+    "model.summary()\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
@@ -482,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Load"
+    "## Model Load and Predict"
    ]
   },
   {
@@ -491,7 +358,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.models import load_model\n",
     "model = load_model(config[\"training_data\"][\"model_save_path\"] + 'model_custom.h5')"
    ]
   },
@@ -501,8 +367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "# Assuming `dataset` is your tf.data.Dataset object\n",
+    "# Aquire test images and labels\n",
     "unbatched_dataset = test_dataset.unbatch()\n",
     "images, labels = [], []\n",
     "for image, label in unbatched_dataset.as_numpy_iterator():\n",
@@ -540,7 +405,6 @@
     }
    ],
    "source": [
-    "\n",
     "plot_predicts(model, test_dataset, test_labels, test_images, 10)"
    ]
   }
